# trabalho-pratico-test-software

./: LICENSE  README copy.md  README.md  TESTING.md  coverage.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/: tasks.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_07b053fe5e929eb2___init___py.html  z_07b053fe5e929eb2___main___py.html  z_07b053fe5e929eb2_cli_py.html  z_07b053fe5e929eb2_manager_py.html  z_07b053fe5e929eb2_models_py.html
taskcrafter/: __init__.py  __main__.py  cli.py  manager.py  models.py
test_framework/: __init__.py  assert_example.py  example.py  run_all_tests.py  test_case.py  test_case_test.py  test_loader.py  test_loader_test.py  test_result.py  test_runner.py  test_suite.py  test_suite_test.py
tests/: __init__.py  conftest.py  test_integration.py  test_manager.py  test_models.py
